--- a/Frontend/html/admin/my-profile.html
+++ b/Frontend/html/admin/my-profile.html
@@ -65,23 +65,10 @@
       rel="stylesheet"
       href="../../assets/vendor/libs/typeahead-js/typeahead.css"
     />
-    <link
-      rel="stylesheet"
-      href="../../assets/vendor/libs/select2/select2.css"
-    />
-    <link
-      rel="stylesheet"
-      href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="../../assets/vendor/libs/animate-css/animate.css"
-    />
-    <link
-      rel="stylesheet"
-      href="../../assets/vendor/libs/sweetalert2/sweetalert2.css"
-    />
     <link rel="stylesheet" href="../../assets/vendor/libs/toastr/toastr.css" />
+    <script src="../../assets/vendor/libs/toastr/toastr.js"></script>
+    <script src="../../assets/vendor/libs/bloodhound/bloodhound.js"></script>
+    <script src="../../assets/vendor/libs/typeahead-js/typeahead.js"></script>
 
     <!-- Page CSS -->
     <!-- CropperJS CSS CDN -->
@@ -223,7 +210,7 @@
                 <li class="nav-item dropdown-language dropdown me-2 me-xl-0">
                   <a class="nav-link dropdown-toggle hide-arrow d-flex align-items-center" href="javascript:void(0);" data-bs-toggle="dropdown" id="languageDropdownBtn">
                     <span class="fi fi-vn me-2" id="current-lang-flag" style="width: 1.5em; height: 1em;"></span>
-                    <span id="current-lang-name">Tiếng Việt</span>
+                    <span id="current-lang-name">Loading...</span>
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdownBtn">
                     <li>
@@ -277,7 +264,7 @@
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li>
-                      <a class="dropdown-item" href="#">
+                      <a class="dropdown-item" href="my-profile.html">
                         <div class="d-flex">
                           <div class="flex-shrink-0 me-3">
                             <div class="avatar avatar-online">
@@ -585,7 +572,7 @@
                           <div class="d-flex align-items-center">
                             <img
                               id="edit-profilePicture-preview"
-                              src="about:blank"
+                              src=""
                               alt="Profile Picture Preview"
                               style="
                                 width: 80px;
@@ -709,8 +696,9 @@
                         </div>
                         <button
                           type="submit"
-                          class="btn btn-danger deactivate-account"
+                          class="btn btn-secondary deactivate-account"
                           data-i18n="deactivateAccount"
+                          disabled
                         >
                           Deactivate Account
                         </button>
@@ -792,7 +780,6 @@
               type="button"
               class="btn-close"
               data-bs-dismiss="modal"
-              data-i18n="[aria-label]close"
               aria-label="Close"
             ></button>
           </div>
@@ -996,7 +983,6 @@
     <script src="../../assets/vendor/libs/hammer/hammer.js"></script>
     <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
     <script src="../../assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
-    <script src="../../assets/vendor/libs/typeahead-js/typeahead.js"></script>
     <script src="../../assets/vendor/js/menu.js"></script>
 
     <!-- endbuild -->
@@ -1009,12 +995,12 @@
     <script src="../../assets/vendor/libs/cleavejs/cleave.js"></script>
     <script src="../../assets/vendor/libs/cleavejs/cleave-phone.js"></script>
     <script src="../../assets/vendor/libs/sweetalert2/sweetalert2.js"></script>
-    <script src="../../assets/vendor/libs/toastr/toastr.js"></script>
 
     <!-- Main JS -->
     <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
     <script src="../../assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
     <script src="../../assets/js/main.js"></script>
+    <script src="../../js/admin-auth.js"></script>
 
     <!-- Page JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
