--- a/Frontend/html/admin/security.html
+++ b/Frontend/html/admin/security.html
@@ -74,6 +74,8 @@
       href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css"
     />
     <link rel="stylesheet" href="../../assets/vendor/libs/toastr/toastr.css" />
+    <script src="../../assets/vendor/libs/toastr/toastr.js"></script>
+
 
     <!-- Page CSS -->
     <link
@@ -284,7 +286,7 @@
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li>
-                      <a class="dropdown-item" href="#">
+                      <a class="dropdown-item" href="my-profile.html">
                         <div class="d-flex">
                           <div class="flex-shrink-0 me-3">
                             <div class="avatar avatar-online">
@@ -533,7 +535,6 @@
                             type="button"
                             class="btn-close"
                             data-bs-dismiss="modal"
-                            data-i18n="[aria-label]close"
                             aria-label="Close"
                           ></button>
                           <div class="text-center mb-4">
@@ -1101,7 +1102,6 @@
     <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
     <script src="../../assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
     <script src="../../assets/vendor/js/menu.js"></script>
-    <script src="../../assets/vendor/libs/toastr/toastr.js"></script>
 
     <!-- endbuild -->
 
@@ -1114,6 +1114,8 @@
     <script src="../../assets/vendor/libs/cleavejs/cleave-phone.js"></script>
 
     <!-- Main JS -->
+    <script src="../../assets/vendor/libs/typeahead-js/typeahead.js"></script>
+    <script src="../../assets/vendor/libs/bloodhound/bloodhound.js"></script>
     <script src="../../assets/js/main.js"></script>
 
     <!-- Page JS -->
