--- a/Frontend/html/auth/account-activated.html
+++ b/Frontend/html/auth/account-activated.html
@@ -87,7 +87,7 @@
               id="languageDropdownBtn"
             >
               <span class="fi fi-vn me-2" id="current-lang-flag" style="width: 1.5em; height: 1em;"></span>
-              <span id="current-lang-name">Tiếng Việt</span>
+                              <span id="current-lang-name">Loading...</span>
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdownBtn">
               <li>
