--- a/Frontend/html/auth/change-password.html
+++ b/Frontend/html/auth/change-password.html
@@ -99,7 +99,7 @@
                 id="languageDropdownBtn"
               >
                 <span class="fi fi-vn me-2" id="current-lang-flag" style="width: 1.5em; height: 1em;"></span>
-                <span id="current-lang-name">Tiếng Việt</span>
+                <span id="current-lang-name">Loading...</span>
               </a>
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdownBtn">
                 <li>
@@ -190,6 +190,8 @@
                       name="currentPassword"
                       data-i18n-placeholder="enterCurrentPassword"
                       aria-describedby="currentPassword"
+                      autocomplete="off"
+                      autofocus
                     />
                     <span class="input-group-text cursor-pointer"
                       ><i class="ti ti-eye-off"></i
@@ -201,6 +203,7 @@
                     for="change-password-new"
                     class="form-label"
                     data-i18n="newPassword"
+                    autocomplete="off"
                     >New Password</label
                   >
                   <div class="input-group input-group-merge">
@@ -211,6 +214,7 @@
                       name="newPassword"
                       data-i18n-placeholder="enterNewPassword"
                       aria-describedby="newPassword"
+                      autocomplete="off"
                     />
                     <span class="input-group-text cursor-pointer"
                       ><i class="ti ti-eye-off"></i
@@ -238,6 +242,7 @@
                       name="confirmPassword"
                       data-i18n-placeholder="enterConfirmNewPassword"
                       aria-describedby="confirmPassword"
+                      autocomplete="off"
                     />
                     <span class="input-group-text cursor-pointer"
                       ><i class="ti ti-eye-off"></i
