--- a/Frontend/html/auth/forgot-password.html
+++ b/Frontend/html/auth/forgot-password.html
@@ -203,6 +203,7 @@
                     name="email"
                     data-i18n-placeholder="enterEmail"
                     placeholder="Enter your email"
+                    autocomplete="off"
                     autofocus
                   />
                 </div>
