--- a/Frontend/html/auth/reset-password.html
+++ b/Frontend/html/auth/reset-password.html
@@ -161,6 +161,8 @@
                       data-i18n-placeholder="enterPassword"
                       placeholder="••••••••••••"
                       aria-describedby="password"
+                      autocomplete="off"
+                      autofocus
                     />
                     <span class="input-group-text cursor-pointer"
                       ><i class="ti ti-eye-off"></i
@@ -183,6 +185,7 @@
                       data-i18n-placeholder="enterConfirmPassword"
                       placeholder="••••••••••••"
                       aria-describedby="password"
+                      autocomplete="off"
                     />
                     <span class="input-group-text cursor-pointer"
                       ><i class="ti ti-eye-off"></i
