[UPDATE]/Enhance multi-language support by updating email templates for password change, account deactivation, account restoration, and password reset in Japanese and Vietnamese. Additionally, update frontend admin pages to use CDN for Toastr CSS and JS for improved performance.

--- a/Frontend/html/admin/deactive-users.html
+++ b/Frontend/html/admin/deactive-users.html
@@ -65,10 +65,8 @@
       rel="stylesheet"
       href="../../assets/vendor/libs/typeahead-js/typeahead.css"
     />
-    <link rel="stylesheet" href="../../assets/vendor/libs/toastr/toastr.css" />
-    <script src="../../assets/vendor/libs/toastr/toastr.js"></script>
-    <script src="../../assets/vendor/libs/bloodhound/bloodhound.js"></script>
-    <script src="../../assets/vendor/libs/typeahead-js/typeahead.js"></script>
+    <!-- Toastr CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link
       rel="stylesheet"
       href="../../assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css"
@@ -510,15 +508,15 @@
     <script src="../../assets/vendor/libs/cleavejs/cleave.js"></script>
     <script src="../../assets/vendor/libs/cleavejs/cleave-phone.js"></script>
 
-    <script src="../../assets/vendor/libs/bloodhound/bloodhound.js"></script>
-
     <!-- Main JS -->
     <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
     <script src="../../assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
     <script src="../../assets/js/main.js"></script>
 
-    <!-- Page JS -->
+    <!-- Toastr JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
+    <!-- Page JS -->
     <script src="../../js/admin-auth.js"></script>
     <script>
       loadDeactiveUsersTable();
