--- a/Frontend/html/admin/security.html
+++ b/Frontend/html/admin/security.html
@@ -73,8 +73,8 @@
       rel="stylesheet"
       href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css"
     />
-    <link rel="stylesheet" href="../../assets/vendor/libs/toastr/toastr.css" />
-    <script src="../../assets/vendor/libs/toastr/toastr.js"></script>
+    <!-- Toastr CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
 
 
     <!-- Page CSS -->
@@ -1114,9 +1114,12 @@
     <script src="../../assets/vendor/libs/cleavejs/cleave-phone.js"></script>
 
     <!-- Main JS -->
-    <script src="../../assets/vendor/libs/typeahead-js/typeahead.js"></script>
-    <script src="../../assets/vendor/libs/bloodhound/bloodhound.js"></script>
+    <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
+    <script src="../../assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
     <script src="../../assets/js/main.js"></script>
+
+    <!-- Toastr JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
     <!-- Page JS -->
     <script src="../../js/admin-auth.js"></script>
