--- a/Frontend/html/admin/index.html
+++ b/Frontend/html/admin/index.html
@@ -65,7 +65,8 @@
       rel="stylesheet"
       href="../../assets/vendor/libs/typeahead-js/typeahead.css"
     />
-    <link rel="stylesheet" href="../../assets/vendor/libs/toastr/toastr.css" />
+    <!-- Toastr CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link
       rel="stylesheet"
       href="../../assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css"
@@ -82,9 +83,6 @@
       rel="stylesheet"
       href="../../assets/vendor/libs/select2/select2.css"
     />
-    <script src="../../assets/vendor/libs/toastr/toastr.js"></script>
-    <script src="../../assets/vendor/libs/bloodhound/bloodhound.js"></script>
-    <script src="../../assets/vendor/libs/typeahead-js/typeahead.js"></script>
 
     <!-- Page CSS -->
 
@@ -623,6 +621,9 @@
     <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
     <script src="../../assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
     <script src="../../assets/js/main.js"></script>
+
+    <!-- Toastr JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
     <!-- Page JS -->
     <script src="../../js/admin-auth.js"></script>
