--- a/Frontend/html/auth/login.html
+++ b/Frontend/html/auth/login.html
@@ -69,10 +69,7 @@
     <link rel="stylesheet" href="../../assets/vendor/css/pages/page-auth.css" />
     <link rel="stylesheet" href="../../css/auth.css" />
     <!-- Toastr CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
 
     <!-- Helpers -->
     <script src="../../assets/vendor/js/helpers.js"></script>
